<resources>
    <string name="app_name">DoodleComics_20k1688_20i0665</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up_with_username">Sign Up With Username</string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="sign_up_with_number">Sign Up With Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="number">Number...</string>
    <string name="send_otp">Send OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirmPassword">Confirm Password...</string>
    <string name="username">Username...</string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="_0">0</string>
    <string name="didnt_recieve_otp">Didn\'t Receive OTP?</string>
    <string name="resendOTP">Resend Code</string>
    <string name="login_with_username">Login with Username</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_number">Login with Number</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="we_ll_send_you_a_verification_code_on_your_email">We\'ll send you a verification code on your email.</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="enter_the_code">Enter the 06 digit code we shared in your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="ExploreComics">Explore Comics</string>
    <string name="ExploreArtists">Explore Artists</string>
    <string name="challenge_of_the_day">Challenge Of The Day</string>
    <string name="artist_name">Artist Name</string>
    <string name="comic_name">Comic Name</string>
    <string name="comic_cover">Comic Cover</string>
    <string name="create_strip">Create Strip</string>
    <string name="CreateNewComicStrip">Create a new comic strip</string>
    <string name="enter_comic_title">Enter Comic Title:</string>
    <string name="enter_comic_genre">Enter Comic Genre:</string>
    <string name="enter_comic_description">"Enter Comic Description: "</string>
    <string name="upload_comic_cover">Upload Comic Cover:</string>
    <string name="dots">...</string>
    <string name="SharedComics">Shared Comics</string>
    <string name="ComicGallery">Comic Gallery</string>
    <string name="search_titles_artists_genres">Search titles, artists, genres...</string>
    <string name="remixComic">Remix Comic</string>
    <string name="GenreComedy">Genre Comedy</string>
    <string name="SearchResults">Search Results</string>
    <string name="Title">Title</string>
    <string name="Arist">artist...</string>
    <string name="Date">Publish Date</string>
    <string name="Likes">Likes: value</string>
    <string name="Remixes">Remixes: value</string>
    <string name="FilterByPopularity">Filtered By Popularity</string>
    <string name="FilterByDate">Filtered By Date</string>
    <string name="Artist">Artist: value</string>
    <string name="Genre">Genre: value</string>
    <string name="Description">Description: value</string>
    <string name="filter_search">Filter Search</string>
    <string name="filter">Filter</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="createComic">Create Comic</string>
    <string name="createStrip">Create Strip</string>
    <string name="update">Update</string>
    <string name="startDoodling">Start Doodling</string>
    <string name="artist_name_accepted">Artist Name accepted your collaboration request!</string>
    <string name="start_collab">Start Collaborating</string>
    <string name="comment_view">Comment View</string>
    <string name="comic_view">Comic View</string>
    <string name="leave_a_comment_for_your_collaborative_comic">Leave a comment for your collaborative comic</string>
    <string name="comment">comment...</string>
    <string name="Profile">Profile</string>
    <string name="MyComics">My Comics</string>
    <string name="MyTemplates">My Templates</string>
    <string name="template_name">Template Name</string>
    <string name="Challenge_name">Challenge Name</string>
    <string name="bio">Bio..</string>
    <string name="awards">Awards</string>
    <string name="social">Social Media...</string>
    <string name="title_activity_homepage_navigation_drawer">HomepageNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="create_new_comic">Create New Comic</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="challenges">Challenges</string>
    <string name="collaboration">Collaboration</string>
    <string name="remix_comics">Remix Comics</string>
    <string name="comic_templates">Comic Templates</string>
    <string name="Rules">Rules</string>
    <string name="Deadline">Deadline</string>
    <string name="existing_comic">Existing Comic</string>
    <string name="new_comic">New Comic</string>
    <string name="Desc">Description</string>
    <string name="publish">Publish</string>
    <string name="artist_name_liked">Artist Name liked your comic.</string>
    <string name="artist_name_commented">Artist Name commented on your collaborative comic.</string>
</resources>