<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/profilesettingsbg"
    tools:context=".ProfileSettings">


    <EditText
        android:id="@+id/editUsername"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>

    <EditText
        android:id="@+id/editEmail"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>
    <EditText
        android:id="@+id/editNumber"
        android:hint="@string/number"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>

    <EditText
        android:id="@+id/editPassword"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>
    <EditText
        android:id="@+id/bio"
        android:hint="@string/bio"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>
    <EditText
        android:id="@+id/socialMedia"
        android:hint="@string/social"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:background="@drawable/textfieldbg"/>

    <TextView
        android:id="@+id/updateProfile"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/update"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/pink_blue_button" />



</LinearLayout>