<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registrationbg"
    tools:context=".SignUpWithEmail">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_email"
        android:textSize="20sp"
        android:textColor="#00433D"
        android:shadowColor="#DF706F6F"
        android:shadowDx="4"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:layout_marginTop="280dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"/>



    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:gravity="start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:gravity="start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:inputType="numberPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/pink_button"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/already_have_an_account"
        android:textSize="16sp"
        android:textColor="#00433D"
        android:shadowRadius="8"
        android:gravity="center"/>
    <TextView
        android:id="@+id/loginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#E91E63"
        android:shadowRadius="8"
        android:gravity="center"/>


</LinearLayout>