<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registrationbg"
    tools:context=".LoginWithNumber">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_number"
        android:textSize="20sp"
        android:textColor="#00433D"
        android:shadowColor="#DF706F6F"
        android:shadowDx="4"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:layout_marginTop="280dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"/>



    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/number"
        android:gravity="start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/sendOTP"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/pink_button"
        android:gravity="center"
        android:text="@string/send_otp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/dont_have_an_account"
        android:textSize="16sp"
        android:textColor="#00433D"
        android:shadowRadius="8"
        android:gravity="center"/>
    <TextView
        android:id="@+id/signupScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#E91E63"
        android:shadowRadius="8"
        android:gravity="center"/>



</LinearLayout>