<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mycomicbg"
    tools:context=".ComicSearchResultDisplay">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/comic_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:layout_marginStart="30dp"
                    android:text="@string/Artist"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:layout_marginStart="30dp"
                    android:text="@string/Genre"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/editButton"
                android:layout_width="45dp"
                android:layout_marginStart="90dp"
                android:layout_height="45dp"
                android:background="@drawable/editcomic_icon"/>

        </LinearLayout>



        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/baseline_image_24"
            android:contentDescription="@string/comic_cover"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:layout_marginStart="30dp"
            android:text="@string/Description"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/likes"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/Likes"/>

            <TextView
                android:id="@+id/remixes"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/Remixes"/>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>