<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/createchallengebg"
    tools:context=".CreateChallenge">

    <EditText
        android:id="@+id/challengeName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/Challenge_name"
        android:inputType="text"
        android:gravity="center"
        android:textColor="#E91E63"
        android:background="@drawable/challengenamebgfield"
        android:layout_marginTop="250dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/challengeDescription"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:hint="@string/Desc"
            android:inputType="text"
            android:gravity="center"
            android:textColor="#E91E63"
            android:background="@drawable/challengedescrulesbgfield"/>

        <EditText
            android:id="@+id/challengeRules"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:hint="@string/Rules"
            android:inputType="text"
            android:gravity="center"
            android:textColor="#E91E63"
            android:background="@drawable/challengedescrulesbgfield"/>


    </LinearLayout>


    <EditText
        android:id="@+id/deadline"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:hint="@string/Deadline"
        android:inputType="text"
        android:gravity="center"
        android:textColor="#E91E63"
        android:background="@drawable/challengedeadlinedield"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/createComic"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:text="@string/publish"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/pink_blue_button" />

</LinearLayout>