<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registrationbg"
    tools:context=".ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textColor="#00433D"
        android:shadowColor="#DF706F6F"
        android:shadowDx="4"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:layout_marginTop="280dp"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_ll_send_you_a_verification_code_on_your_email"
        android:textSize="16sp"
        android:textColor="#00433D"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="start"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:gravity="start"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/sendCode"
        android:layout_width="123dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/pink_button"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />




</LinearLayout>